--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-Django==3.0.8
-mysqlclient==2.0.1
-Pillow==7.2.0
+asgiref==3.3.1
+dj-database-url==0.5.0
+Django==3.1.4
 django-ckeditor==6.0.0
 django-cleanup==5.1.0
-dj-database-url==0.5.0
+django-js-asset==1.2.2
+mysqlclient==2.0.2
+Pillow==8.0.1
+pytz==2020.4
+sqlparse==0.4.1
